--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@
 *.dll
 *.so
 *.dylib
-
 # Test binary, built with `go test -c`
 *.test
-
+.idea
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
